--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,9 @@
 h1 {
     color: darkred;
-    text-align: center;
 }
 
 h2 {
     font-style: italic;
-    text-align: center;
     color: red;
 }
 
@@ -14,6 +12,7 @@ p {
 }
 
 body {
-    background-color: salmon'
-
+    background-color: salmon;
+    font-family: sans-serif;
+    text-align: center;
 }
